--- a/src/app/theme/theme.scss
+++ b/src/app/theme/theme.scss
@@ -2,5 +2,6 @@
 @import "sass/_socialicon";
 @import "sass/_color";
 @import "sass/_layout";
+@import "sass/_dimen";
 @import "sass/_font";
 @import "sass/_text";
