--- a/src/app/ui/home/home.component.html
+++ b/src/app/ui/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="np-layout-ribbon back-color-primary"></div>
+<div class="np-layout-ribbon back-color-grey"></div>
 <div class=" np-layout-overlap-40vh">
     <div class="np-layout-content">
         <div class="profile np-container back-color-white" mdl-shadow="2">
@@ -68,49 +68,55 @@
 
     </div>
 
-    <div class="service back-color-primary">
+    <div class="service back-color-grey">
         <div class="title">
-            <h6 class="font-comfortaa text-shadow white">Services</h6>
+            <h6 class="font-comfortaa text-shadow text-color-dark">Services</h6>
         </div>
-        <div class="np-container">
+        <div class="np-container np-padding-bottom-32">
             <div class="mdl-grid">
 
-                <div class="service-list-item mdl-cell mdl-cell--4-col-tablet mdl-cell--4-col">
-                    <div class="service-block text-color-primary-light">
+                <div class="service-list-item mdl-cell mdl-cell--4-col-tablet mdl-cell--4-col" >
+                    <div class="service-block text-color-default back-color-white" mdl-shadow="2">
                         <!--h4 class="font-comfortaa font-bolder text-shadow">Hey!</h4-->
-                        <span class="service-logo"><i class="icon-mobile socialicon  text-shadow"></i></span>
+                        <span class="service-logo"><i class="icon-mobile socialicon text-color-dark text-shadow"></i></span>
                          <h6 class="font-comfortaa">
                             <!--span class="font-light">I'm </span-->Android App Development</h6>
                         <!--h6 class="font-open-sans text-shadow"> App &amp; web developer</h6-->
-                        <button mdl-button mdl-button-type="icon"><mdl-icon>trending_flat</mdl-icon></button>
+                        <button mdl-button mdl-button-type="icon" mdl-colored="primary"><mdl-icon>trending_flat</mdl-icon></button>
                     </div>
                 </div>
 
                 <div class="service-list-item mdl-cell mdl-cell--4-col-tablet mdl-cell--4-col">
-                    <div class="service-block text-color-primary-light">
+                    <div class="service-block text-color-default back-color-white"  mdl-shadow="2">
                         <!--h4 class="font-comfortaa font-bolder text-shadow">Hey!</h4-->
-                        <span class="service-logo"><i class="icon-code socialicon text-shadow"></i></span>
+                        <span class="service-logo"><i class="icon-code socialicon text-color-dark text-shadow"></i></span>
                          <h6 class="font-comfortaa">
                             <!--span class="font-light">I'm </span-->Web Development</h6>
                         <!--h6 class="font-open-sans text-shadow"> App &amp; web developer</h6-->
-                        <button mdl-button mdl-button-type="icon"><mdl-icon>trending_flat</mdl-icon></button>
+                        <button mdl-button mdl-button-type="icon" mdl-colored="primary"><mdl-icon>trending_flat</mdl-icon></button>
                          
                     </div>
                 </div>
 
                
                 <div class="service-list-item mdl-cell mdl-cell--8-col-tablet mdl-cell--4-col">
-                    <div class="service-block text-color-primary-light">
+                    <div class="service-block text-color-default back-color-white" mdl-shadow="2">
                         <!--h4 class="font-comfortaa font-bolder text-shadow">Hey!</h4-->
-                        <span class="service-logo"><i class="icon-server socialicon  text-shadow"></i></span>
+                        <span class="service-logo"><i class="icon-server socialicon text-color-dark text-shadow"></i></span>
                          <h6 class="font-comfortaa">
                             <!--span class="font-light">I'm </span-->Backend Development</h6>
                         <!--h6 class="font-open-sans text-shadow"> App &amp; web developer</h6-->
-                        <button mdl-button mdl-button-type="icon"><mdl-icon>trending_flat</mdl-icon></button>
+                        <button mdl-button mdl-button-type="icon" mdl-colored="primary"><mdl-icon>trending_flat</mdl-icon></button>
                     </div>
                 </div>
 
             </div>
+        </div>
+    </div>
+
+    <div class="technology back">
+        <div class="title">
+            <h6 class="font-comfortaa text-shadow">Technology</h6>
         </div>
     </div>
 </div>
