--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,7 +10,7 @@ $color-primary-contrast: $color-dark-contrast;
 $color-accent-contrast: $color-dark-contrast;
 
 $np-color-primary-50: unquote("rgb(#{$palette-purple-50})") !default;
-
+$np-color-back-grey:  unquote("rgb(#{$palette-grey-50})");
 @import '~@angular-mdl/core/scss/material-design-lite';
 
 @import '~@angular-mdl/popover/popover';
