--- a/src/app/theme/sass/_dimen.scss
+++ b/src/app/theme/sass/_dimen.scss
@@ -1,7 +1,12 @@
 .np-padding-v-8{
   padding: 8px 0px;
 }
-
+.np-padding-bottom-32{
+  padding-bottom: 32px;
+}
 .np-margin-top-32{
   margin-top: 32px;
+}
+.np-margin-bottom-20{
+  margin-bottom: 20px;
 }
