--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <!--mdl-layout mdl-layout-fixed-header mdl-layout-mode="waterfall">
 	<mdl-layout-header >
-		<mdl-layout-header-row class="main-header" >
+		<mdl-layout-header-row class="main-header-row" >
 			<div *ngIf="mainLayout.isSmallScreen" class="mdl-layout__drawer-button" (click)="mainLayout.toggleDrawer()">
 				<mdl-icon>&#xE5D2;</mdl-icon>
 			</div>
@@ -47,7 +47,7 @@
 
 <!--mdl-layout mdl-layout-fixed-header mdl-layout-mode="waterfall">
 	<mdl-layout-header>
-		<mdl-layout-header-row class="main-header">
+		<mdl-layout-header-row class="main-header-row">
 			<div *ngIf="mainLayout.isSmallScreen" class="mdl-layout__drawer-button" (click)="mainLayout.toggleDrawer()">
 				<mdl-icon>&#xE5D2;</mdl-icon>
 			</div>
@@ -96,16 +96,16 @@
 
 
 <mdl-layout mdl-layout-no-drawer-button mdl-layout-fixed-header mdl-layout-header-seamed mdl-layout-mode="waterfall" #mainLayout="mdlLayout">
-    <mdl-layout-header>
-        <mdl-layout-header-row class="main-header">
+    <mdl-layout-header class="main-header">
+        <mdl-layout-header-row class="main-header-row">
 
-            <mdl-layout-title>{{title}}</mdl-layout-title>
+            <mdl-layout-title class="color-primary font-open-sans">{{title}}</mdl-layout-title>
             <mdl-layout-spacer></mdl-layout-spacer>
             <!-- Navigation. We hide it in small screens. -->
             <nav class="mdl-navigation mdl-layout--large-screen-only">
-                <a class="mdl-navigation__link" routerLink="/home" routerLinkActive="is-active">Home</a>
-                <a class="mdl-navigation__link" routerLink="/portfolio" routerLinkActive="is-active">Portfolio</a>
-                <a class="mdl-navigation__link" routerLink="/profile" routerLinkActive="is-active">About/Contact</a>
+                <a class="mdl-navigation__link"  routerLink="/home" routerLinkActive="indicator-primary-important color-important-primary">Home</a>
+                <a class="mdl-navigation__link" routerLink="/portfolio" routerLinkActive="indicator-primary-important color-important-primary">Portfolio</a>
+                <a class="mdl-navigation__link" routerLink="/profile" routerLinkActive="indicator-primary-important color-important-primary">About/Contact</a>
             </nav>
         </mdl-layout-header-row>
     </mdl-layout-header>
@@ -133,7 +133,7 @@
     </div-->
 </mdl-layout>
 <div *ngIf="mainLayout.isSmallScreen" class="mdl-layout__drawer-button" mdl-ripple  (click)="mainLayout.toggleDrawer()">
-    <mdl-icon class="white">&#xE5D2;</mdl-icon>
+    <mdl-icon class="text-color-dark">&#xE5D2;</mdl-icon>
 </div>
 <!--button mdl-button *ngIf="mainLayout.isSmallScreen" class="mdl-layout__drawer-button"  mdl-button-type="fab"  mdl-ripple (click)="mainLayout.toggleDrawer()">
         <mdl-icon>&#xE5D2;</mdl-icon>
