--- a/src/app/theme/theme.scss
+++ b/src/app/theme/theme.scss
@@ -1,4 +1,5 @@
 @import "sass/conf/_variables";
+@import "sass/draw/_border";
 @import "sass/_socialicon";
 @import "sass/_color";
 @import "sass/_layout";
