--- a/src/app/theme/sass/_font.scss
+++ b/src/app/theme/sass/_font.scss
@@ -1,37 +1,41 @@
-.font-open-sans{
+.np-font-open-sans{
     font-family: $font-open-sans;
 }
-.font-comfortaa{
+.np-font-comfortaa{
     font-family: $font-comfortaa;
 }
 
-.font-light{
+.np-font-light{
     font-weight: $font-light;
 }
-.font-bold{
+.np-font-bold{
     font-weight: $font-bold;
 }
 
-.font-bolder{
+.np-font-bolder{
     font-weight: $font-bolder;
 }
 
 
-.font-20{
+.np-font-20{
     font-size: $font-20;
  }
 
-.font-18{
+.np-font-18{
     font-size: $font-18;
  }
 
-.font-14{
+.np-font-16{
+    font-size: $font-16;
+ }
+
+.np-font-14{
     font-size: $font-14;
  }
 
-.font-12{
+.np-font-12{
     font-size: $font-12;
  }
- .font-10{
+ .np-font-10{
     font-size: $font-10;
  }
