--- a/src/app/theme/theme.scss
+++ b/src/app/theme/theme.scss
@@ -1,6 +1,7 @@
 @import "sass/conf/_variables";
-@import "sass/draw/_border";
 @import "sass/_socialicon";
+@import "sass/draw/_border";
+@import "sass/draw/_selector";
 @import "sass/_color";
 @import "sass/_layout";
 @import "sass/_dimen";
