--- a/src/app/ui/home/home.component.html
+++ b/src/app/ui/home/home.component.html
@@ -1,22 +1,22 @@
-<div class="np-layout-ribbon back-color-grey"></div>
+<div class="np-layout-ribbon np-color-grey"></div>
 <div class=" np-layout-overlap-40vh">
     <div class="np-layout-content">
-        <div class="profile np-container back-color-white" mdl-shadow="2">
+        <div class="profile np-container np-color-white" mdl-shadow="2">
 
             <div class="mdl-grid profile-content">
 
                 <div class="mdl-cell mdl-cell--6-col-tablet mdl-cell--4-col">
-                    <div class="profile-info text-color-dark">
-                        <!--h4 class="font-comfortaa font-bolder text-shadow">Hey!</h4-->
-                        <h4 class="font-comfortaa font-bolder text-shadow">
-                            <!--span class="font-light">I'm </span-->Niraj Prakash</h4>
-                        <!--h6 class="font-open-sans text-shadow"> App &amp; web developer</h6-->
-                        <h6 class="font-open-sans font-bold font-10">Android &amp; Full Stack Developer</h6>
+                    <div class="profile-info np-text-color-dark">
+                        <!--h4 class="np-font-comfortaa np-font-bolder np-text-shadow">Hey!</h4-->
+                        <h4 class="np-font-comfortaa np-font-bolder np-text-shadow">
+                            <!--span class="np-font-light">I'm </span-->Niraj Prakash</h4>
+                        <!--h6 class="np-font-open-sans np-text-shadow"> App &amp; web developer</h6-->
+                        <h6 class="np-font-open-sans np-font-bold np-font-10">Android &amp; Full Stack Developer</h6>
                     </div>
                 </div>
                 <div class="profile-detail mdl-cell mdl-cell--12-col">
 
-                    <p class="text-color-default font-open-sans font-14">Hello! I’m Niraj Prakash. Senior Web Developer specializing in front end development. Experienced with
+                    <p class="np-text-color-default np-font-open-sans np-font-14">Hello! I’m Niraj Prakash. Senior Web Developer specializing in front end development. Experienced with
                         all stages of the development cycle for dynamic web projects. Well-versed in numerous programming
                         languages including JavaScript, SQL, and C. Stng background in project management and customer relations.</p>
 
@@ -56,43 +56,43 @@
     </div>
     <div class="np-padding-v-8 np-margin-top-32">
 
-        <div class="profile-action font-open-sans">
+        <div class="profile-action np-font-open-sans">
             <button mdl-button mdl-button-type="raised" mdl-colored="primary" mdl-ripple>
-    <span class="font-open-sans font-12">See Portfolio</span>
+    <span class="np-font-open-sans np-font-12">See Portfolio</span>
   </button>
 
             <button mdl-button mdl-colored="primary" mdl-ripple>
-    <span class="font-open-sans font-12 font-bold">Download CV</span>
+    <span class="np-font-open-sans np-font-12 np-font-bold">Download CV</span>
   </button>
         </div>
 
     </div>
 
-    <div class="service back-color-grey">
+    <div class="service np-color-grey">
         <div class="title">
-            <h6 class="font-comfortaa text-shadow text-color-dark">Services</h6>
+            <h6 class="np-font-comfortaa np-text-shadow np-text-color-dark">Services</h6>
         </div>
         <div class="np-container np-padding-bottom-32">
             <div class="mdl-grid">
 
                 <div class="service-list-item mdl-cell mdl-cell--4-col-tablet mdl-cell--4-col" >
-                    <div class="service-block text-color-default back-color-white" mdl-shadow="2">
-                        <!--h4 class="font-comfortaa font-bolder text-shadow">Hey!</h4-->
-                        <span class="service-logo"><i class="icon-mobile socialicon text-color-dark text-shadow"></i></span>
-                         <h6 class="font-comfortaa">
-                            <!--span class="font-light">I'm </span-->Android App Development</h6>
-                        <!--h6 class="font-open-sans text-shadow"> App &amp; web developer</h6-->
+                    <div class="service-block np-text-color-default np-color-white" mdl-shadow="2">
+                        <!--h4 class="np-font-comfortaa np-font-bolder np-text-shadow">Hey!</h4-->
+                        <span class="service-logo"><i class="icon-mobile socialicon np-text-color-dark np-text-shadow"></i></span>
+                         <h6 class="np-font-comfortaa">
+                            <!--span class="np-font-light">I'm </span-->Android App Development</h6>
+                        <!--h6 class="np-font-open-sans np-text-shadow"> App &amp; web developer</h6-->
                         <button mdl-button mdl-button-type="icon" mdl-colored="primary"><mdl-icon>trending_flat</mdl-icon></button>
                     </div>
                 </div>
 
                 <div class="service-list-item mdl-cell mdl-cell--4-col-tablet mdl-cell--4-col">
-                    <div class="service-block text-color-default back-color-white"  mdl-shadow="2">
-                        <!--h4 class="font-comfortaa font-bolder text-shadow">Hey!</h4-->
-                        <span class="service-logo"><i class="icon-code socialicon text-color-dark text-shadow"></i></span>
-                         <h6 class="font-comfortaa">
-                            <!--span class="font-light">I'm </span-->Web Development</h6>
-                        <!--h6 class="font-open-sans text-shadow"> App &amp; web developer</h6-->
+                    <div class="service-block np-text-color-default np-color-white"  mdl-shadow="2">
+                        <!--h4 class="np-font-comfortaa np-font-bolder np-text-shadow">Hey!</h4-->
+                        <span class="service-logo"><i class="icon-code socialicon np-text-color-dark np-text-shadow"></i></span>
+                         <h6 class="np-font-comfortaa">
+                            <!--span class="np-font-light">I'm </span-->Web Development</h6>
+                        <!--h6 class="np-font-open-sans np-text-shadow"> App &amp; web developer</h6-->
                         <button mdl-button mdl-button-type="icon" mdl-colored="primary"><mdl-icon>trending_flat</mdl-icon></button>
                          
                     </div>
@@ -100,12 +100,12 @@
 
                
                 <div class="service-list-item mdl-cell mdl-cell--8-col-tablet mdl-cell--4-col">
-                    <div class="service-block text-color-default back-color-white" mdl-shadow="2">
-                        <!--h4 class="font-comfortaa font-bolder text-shadow">Hey!</h4-->
-                        <span class="service-logo"><i class="icon-server socialicon text-color-dark text-shadow"></i></span>
-                         <h6 class="font-comfortaa">
-                            <!--span class="font-light">I'm </span-->Backend Development</h6>
-                        <!--h6 class="font-open-sans text-shadow"> App &amp; web developer</h6-->
+                    <div class="service-block np-text-color-default np-color-white" mdl-shadow="2">
+                        <!--h4 class="np-font-comfortaa np-font-bolder np-text-shadow">Hey!</h4-->
+                        <span class="service-logo"><i class="icon-server socialicon np-text-color-dark np-text-shadow"></i></span>
+                         <h6 class="np-font-comfortaa">
+                            <!--span class="np-font-light">I'm </span-->Backend Development</h6>
+                        <!--h6 class="np-font-open-sans np-text-shadow"> App &amp; web developer</h6-->
                         <button mdl-button mdl-button-type="icon" mdl-colored="primary"><mdl-icon>trending_flat</mdl-icon></button>
                     </div>
                 </div>
@@ -116,7 +116,7 @@
 
     <div class="technology back">
         <div class="title">
-            <h6 class="font-comfortaa text-shadow">Technology</h6>
+            <h6 class="np-font-comfortaa np-text-shadow">Technology</h6>
         </div>
     </div>
 </div>
