--- a/src/app/ui/profile/profile.component.html
+++ b/src/app/ui/profile/profile.component.html
@@ -7,14 +7,14 @@
                 <img src="assets/img/avatar.jpg">
             </div>
             <div class="mdl-cell mdl-cell--5-col-tablet mdl-cell--8-col">
-                <div class="profile-info text-color-dark">
-                    <h4 class="font-comfortaa font-bolder text-shadow">Hey!</h4>
-                    <h4 class="font-comfortaa font-bolder text-shadow"><span class="font-light">I'm </span>Niraj Prakash</h4>
-                    <!--h6 class="font-open-sans text-shadow"> App &amp; web developer</h6-->
+                <div class="profile-info np-text-color-dark">
+                    <h4 class="font-comfortaa font-bolder np-text-shadow">Hey!</h4>
+                    <h4 class="font-comfortaa font-bolder np-text-shadow"><span class="font-light">I'm </span>Niraj Prakash</h4>
+                    <!--h6 class="font-open-sans np-text-shadow"> App &amp; web developer</h6-->
                     <h6 class="font-open-sans font-bold font-10">Android &middot; Website &middot; Server</h6>
                 </div>
 
-                <div class="profile-detail text-color-default">
+                <div class="profile-detail np-text-color-default">
                     <p class=""><span class="icon"><i class="material-icons font-20">email</i></span><span class="content">nirajprakash13@gmail.com</span></p>
                     <p class=""><span class="icon"><i class="material-icons font-20">location_on</i></span><span class="content">Koramangala, Bangalore, India</span></p>
                     <!--ul>
