--- a/src/app/theme/sass/conf/_variables.scss
+++ b/src/app/theme/sass/conf/_variables.scss
@@ -22,7 +22,8 @@ $font-ultraBold: 900;
 $np-color-primary : unquote("rgb(#{$color-primary})") !default;
 $np-color-primary-50 : white !default;
 $np-color-back-grey : #dfdfdf !default;
-
+$np-color-grey-default: $list-supporting-text-text-color;
+$np-color-grey-dark: $default-item-text-color;
 $np-color-accent : unquote("rgb(#{$color-accent})") !default;
 
 
