--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -59,3 +59,82 @@ footer {
   height: 16px;
   vertical-align: middle;
 }
+
+
+/******************************
+drawer 
+*/
+
+.np-drawer {
+    border: none;
+
+    .np-navigation {
+        -webkit-flex-grow: 1;
+        -ms-flex-positive: 1;
+        flex-grow: 1;
+        /* iOS Safari specific workaround */
+        z-index: -2;
+        .mdl-navigation__link {
+          cursor: pointer;
+        }
+    }
+
+
+    .nav-header{
+        box-sizing: border-box;
+        display: -webkit-flex;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+        flex-direction: column;
+        -webkit-justify-content: flex-end;
+        -ms-flex-pack: end;
+        justify-content: flex-end;
+        padding: 16px;
+        min-height: 151px;
+    }
+    .nav-avatar-container{
+        
+        margin:40px auto 10px;
+        background: rgba(0, 0, 0, 0.1);
+    border-radius: 50%;
+        padding: 6px;
+    }
+    .nav-avatar {
+        width: 56px;
+        height: 56px;
+        border-radius: 28px;
+    }
+    .nav-title{
+        margin: 0;
+
+    }
+    .nav-subtitle{
+        margin: 0;
+    }
+/*************8
+*/
+
+    .nav-bottom{
+        color: #3d4451;
+        border-top: 1px solid #dedede;
+
+        .social {
+            margin: 0;
+            padding: 0;
+            list-style: none;
+            text-align: center; 
+
+            li {
+                display: inline-block;
+                margin: 5px auto; 
+
+                button .socialicon{
+                    font-size: 12px;
+                    display: block;
+                }
+            }
+        }
+    }
+}
