nav drawer added

--- a/src/app/ui/home/home.component.html
+++ b/src/app/ui/home/home.component.html
@@ -19,8 +19,6 @@
                     <p class="np-text-color-default np-font-open-sans np-font-14">Hello! I’m Niraj Prakash. Senior Web Developer specializing in front end development. Experienced with
                         all stages of the development cycle for dynamic web projects. Well-versed in numerous programming
                         languages including JavaScript, SQL, and C. Stng background in project management and customer relations.</p>
-
-
                 </div>
             </div>
             <div class="profile-bottom np-layout-primary">
@@ -57,13 +55,9 @@
     <div class="np-padding-v-8 np-margin-top-32">
 
         <div class="profile-action np-font-open-sans">
-            <button mdl-button mdl-button-type="raised" mdl-colored="primary" mdl-ripple>
-    <span class="np-font-open-sans np-font-12">See Portfolio</span>
-  </button>
+            <button mdl-button mdl-button-type="raised" mdl-colored="primary" mdl-ripple><span class="np-font-open-sans np-font-12">See Portfolio</span></button>
 
-            <button mdl-button mdl-colored="primary" mdl-ripple>
-    <span class="np-font-open-sans np-font-12 np-font-bold">Download CV</span>
-  </button>
+            <button mdl-button mdl-colored="primary" mdl-ripple><span class="np-font-open-sans np-font-12 np-font-bold">Download CV</span></button>
         </div>
 
     </div>
@@ -75,11 +69,11 @@
         <div class="np-container np-padding-bottom-32">
             <div class="mdl-grid">
 
-                <div class="service-list-item mdl-cell mdl-cell--4-col-tablet mdl-cell--4-col" >
+                <div class="service-list-item mdl-cell mdl-cell--4-col-tablet mdl-cell--4-col">
                     <div class="service-block np-text-color-default np-color-white" mdl-shadow="2">
                         <!--h4 class="np-font-comfortaa np-font-bolder np-text-shadow">Hey!</h4-->
                         <span class="service-logo"><i class="icon-mobile socialicon np-text-color-dark np-text-shadow"></i></span>
-                         <h6 class="np-font-comfortaa">
+                        <h6 class="np-font-comfortaa">
                             <!--span class="np-font-light">I'm </span-->Android App Development</h6>
                         <!--h6 class="np-font-open-sans np-text-shadow"> App &amp; web developer</h6-->
                         <button mdl-button mdl-button-type="icon" mdl-colored="primary"><mdl-icon>trending_flat</mdl-icon></button>
@@ -87,23 +81,23 @@
                 </div>
 
                 <div class="service-list-item mdl-cell mdl-cell--4-col-tablet mdl-cell--4-col">
-                    <div class="service-block np-text-color-default np-color-white"  mdl-shadow="2">
+                    <div class="service-block np-text-color-default np-color-white" mdl-shadow="2">
                         <!--h4 class="np-font-comfortaa np-font-bolder np-text-shadow">Hey!</h4-->
                         <span class="service-logo"><i class="icon-code socialicon np-text-color-dark np-text-shadow"></i></span>
-                         <h6 class="np-font-comfortaa">
+                        <h6 class="np-font-comfortaa">
                             <!--span class="np-font-light">I'm </span-->Web Development</h6>
                         <!--h6 class="np-font-open-sans np-text-shadow"> App &amp; web developer</h6-->
                         <button mdl-button mdl-button-type="icon" mdl-colored="primary"><mdl-icon>trending_flat</mdl-icon></button>
-                         
+
                     </div>
                 </div>
 
-               
+
                 <div class="service-list-item mdl-cell mdl-cell--8-col-tablet mdl-cell--4-col">
                     <div class="service-block np-text-color-default np-color-white" mdl-shadow="2">
                         <!--h4 class="np-font-comfortaa np-font-bolder np-text-shadow">Hey!</h4-->
                         <span class="service-logo"><i class="icon-server socialicon np-text-color-dark np-text-shadow"></i></span>
-                         <h6 class="np-font-comfortaa">
+                        <h6 class="np-font-comfortaa">
                             <!--span class="np-font-light">I'm </span-->Backend Development</h6>
                         <!--h6 class="np-font-open-sans np-text-shadow"> App &amp; web developer</h6-->
                         <button mdl-button mdl-button-type="icon" mdl-colored="primary"><mdl-icon>trending_flat</mdl-icon></button>
