--- a/src/app/theme/theme.scss
+++ b/src/app/theme/theme.scss
@@ -2,6 +2,7 @@
 @import "sass/_socialicon";
 @import "sass/draw/_border";
 @import "sass/draw/_selector";
+@import "sass/draw/_others";
 @import "sass/_color";
 @import "sass/_layout";
 @import "sass/_dimen";
