--- a/src/app/ui/home/home.component.html
+++ b/src/app/ui/home/home.component.html
@@ -1,5 +1,5 @@
-<div class="np-layout-ribbon np-color-grey"></div>
-<div class=" np-layout-overlap-40vh">
+
+<div class="np-color-grey">
     <div class="np-layout-content">
         <div class="profile np-container np-color-white" mdl-shadow="2">
 
@@ -64,7 +64,7 @@
 
     <div class="service np-color-grey">
         <div class="title">
-            <h6 class="np-font-comfortaa np-text-shadow np-text-color-dark">Services</h6>
+            <h6 class="np-font-comfortaa np-text-shadow np-text-color-dark"><span class="np-underline-small-primary">Services</span></h6>
         </div>
         <div class="np-container np-padding-bottom-32">
             <div class="mdl-grid">
