--- a/src/app/ui/home/home.component.scss
+++ b/src/app/ui/home/home.component.scss
@@ -180,6 +180,21 @@
     .title{
         padding: 28px 0 28px 0;
         text-align: center;
+
+        /*h6{
+          position: relative;
+
+          &:after {
+              content: '';
+              position:absolute;
+              bottom:0;
+              left: 30%;
+              right: 30%;
+              height: 2px;
+              background:red;
+              display:block;
+          }
+        }*/
     }
 
     .service-list-item{
