--- a/src/app/ui/portfolio/portfolio.component.scss
+++ b/src/app/ui/portfolio/portfolio.component.scss
@@ -1,4 +1,62 @@
 
+.underline:after {
+  background: #ae0000;
+  bottom: 0;
+  content: "";
+  height: 4px;
+  left: 49.375%;
+  position: absolute;
+  right: 49.375%;
+  -webkit-transition: all .3s cubic-bezier(0.625,.125,.305,.875);
+  transition: all .3s cubic-bezier(0.625,.125,.305,.875);
+  /* width: auto; Default! */
+  /* My customised width */
+  width: 27px;
+  margin-left: -15px;
+}
+
+/*________________________________________*/
+
+h2 > a {
+  position: relative;
+  color: #000;
+  text-decoration: none;
+  
+  /* Text Edits by Me */
+  text-transform: uppercase;
+  font-family: "United Sans", Helvetica, sans-serif;
+  font-weight: 400;
+  font-size: 5rem;
+  color: #333; /* Default: #000 */
+  display: block; /* Centers the Underline */
+  text-align: center;
+}
+
+h2 > a:hover {
+  color: #aa0000; /* Default: #000 */
+}
+
+h2 > a:before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 4px; /* Default: 2px */
+  bottom: 0;
+  left: 0;
+  background-color: #ae0000; /* Default: #000 */
+  visibility: hidden;
+  -webkit-transform: scaleX(0);
+  transform: scaleX(0);
+  -webkit-transition: all 0.3s ease-in-out 0s;
+  transition: all 0.3s ease-in-out 0s;
+}
+
+h2 > a:hover:before {
+  visibility: visible;
+  -webkit-transform: scaleX(1);
+  transform: scaleX(1);
+}
+
 /*
 .social {
   margin: 0;
