working on footer

--- a/src/app/ui/portfolio/portfolio.component.html
+++ b/src/app/ui/portfolio/portfolio.component.html
@@ -1,3 +1,106 @@
+<div class="profile-bottom np-layout-primary">
+  <mdl-layout-spacer></mdl-layout-spacer>
+  <div>
+    <ul class="social">
+      <li>
+        <button mdl-button mdl-button-type="icon">
+                        <i class="icon-github-circled socialicon white"></i>
+                    </button>
+      </li>
+      <li>
+        <button mdl-button mdl-button-type="icon">
+                        <i class="icon-bitbucket socialicon white"></i>
+                    </button>
+      </li>
+      <li>
+        <button mdl-button mdl-button-type="icon">
+                        <i class="icon-linkedin socialicon white"></i>
+                    </button>
+      </li>
+      <li>
+        <button mdl-button mdl-button-type="icon">
+                        <i class="icon-instagram socialicon white"></i>
+                    </button>
+      </li>
+      <li>
+        <button mdl-button mdl-button-type="icon">
+                        <i class="icon-behance socialicon white"></i>
+                    </button>
+      </li>
+    </ul>
+  </div>
+</div>
 
-<h2><a href="http://.com/" class="underline">
-  Animating Link Underline</a></h2>
+<div class="mdl-color--grey-800">
+  <footer class="mdl-mini-footer">
+  
+  <div class="mdl-mini-footer__left-section">
+    <ul class="mdl-mini-footer__link-list">
+      <li><a href="#">About</a></li>
+      <li><a href="#">Contact</a></li>
+    </ul>
+
+  </div>
+  <div class="mdl-mini-footer__right-section">
+    <ul class="social">
+      <li>
+        <button mdl-button mdl-button-type="icon">
+                        <i class="icon-github-circled socialicon white"></i>
+                    </button>
+      </li>
+      <li>
+        <button mdl-button mdl-button-type="icon">
+                        <i class="icon-bitbucket socialicon white"></i>
+                    </button>
+      </li>
+      <li>
+        <button mdl-button mdl-button-type="icon">
+                        <i class="icon-linkedin socialicon white"></i>
+                    </button>
+      </li>
+      <li>
+        <button mdl-button mdl-button-type="icon">
+                        <i class="icon-instagram socialicon white"></i>
+                    </button>
+      </li>
+    </ul>
+  </div>
+</footer>
+</div>
+
+<div class="mdl-color--grey-800">
+<div class="npt-footer np-flex-container ">
+<div class="npt__left-section">
+    <ul class="npt__link-list">
+      <li><a href="#">About</a></li>
+      <li><a href="#">Contact</a></li>
+    </ul>
+
+  </div>
+
+  <div class="npt__right-section">
+    <ul class="social">
+      <li>
+        <button mdl-button mdl-button-type="icon">
+                        <i class="icon-github-circled socialicon white"></i>
+                    </button>
+      </li>
+      <li>
+        <button mdl-button mdl-button-type="icon">
+                        <i class="icon-bitbucket socialicon white"></i>
+                    </button>
+      </li>
+      <li>
+        <button mdl-button mdl-button-type="icon">
+                        <i class="icon-linkedin socialicon white"></i>
+                    </button>
+      </li>
+      <li>
+        <button mdl-button mdl-button-type="icon">
+                        <i class="icon-instagram socialicon white"></i>
+                    </button>
+      </li>
+    </ul>
+  </div>
+</div>
+</div>
