--- a/src/app/ui/portfolio/portfolio.component.scss
+++ b/src/app/ui/portfolio/portfolio.component.scss
@@ -1,64 +1,11 @@
+footer{
+  max-width: 900px;
+  margin: auto;
 
-.underline:after {
-  background: #ae0000;
-  bottom: 0;
-  content: "";
-  height: 4px;
-  left: 49.375%;
-  position: absolute;
-  right: 49.375%;
-  -webkit-transition: all .3s cubic-bezier(0.625,.125,.305,.875);
-  transition: all .3s cubic-bezier(0.625,.125,.305,.875);
-  /* width: auto; Default! */
-  /* My customised width */
-  width: 27px;
-  margin-left: -15px;
-}
-
-/*________________________________________*/
-
-h2 > a {
-  position: relative;
-  color: #000;
-  text-decoration: none;
-  
-  /* Text Edits by Me */
-  text-transform: uppercase;
-  font-family: "United Sans", Helvetica, sans-serif;
-  font-weight: 400;
-  font-size: 5rem;
-  color: #333; /* Default: #000 */
-  display: block; /* Centers the Underline */
-  text-align: center;
-}
-
-h2 > a:hover {
-  color: #aa0000; /* Default: #000 */
-}
-
-h2 > a:before {
-  content: "";
-  position: absolute;
-  width: 100%;
-  height: 4px; /* Default: 2px */
-  bottom: 0;
-  left: 0;
-  background-color: #ae0000; /* Default: #000 */
-  visibility: hidden;
-  -webkit-transform: scaleX(0);
-  transform: scaleX(0);
-  -webkit-transition: all 0.3s ease-in-out 0s;
-  transition: all 0.3s ease-in-out 0s;
-}
-
-h2 > a:hover:before {
-  visibility: visible;
-  -webkit-transform: scaleX(1);
-  transform: scaleX(1);
-}
-
-/*
-.social {
+  .mdl-mini-footer__link-list{
+    margin: 0 auto;
+  }
+  .social {
   margin: 0;
   padding: 0;
   list-style: none;
@@ -67,24 +14,146 @@ h2 > a:hover:before {
   
 .social li {
     display: inline-block;
-    margin: 5px auto; 
+    margin: 5px 15px; 
 }
 
-.social li button .socialicon {
-        font-size: 17px; 
-  } 
-
+.social li button .socialicon{
+   font-size: 20px;
+   display: block;
+}
 
 .social li button {
-      width: 36px;
-      height: 36px; 
-  }
-  */
+      width: 45px;
+      height: 45px;
+}
 
- 
+ @media (max-width: 767px) {
+  .social li {
+    margin-left: 5px;
+    margin-right: 5px; 
+  }
+  .social li button {
+      width: 35px;
+      height: 35px; 
+  }
   /*
   .social li a, .social li a .socialicon {
         line-height: 35px; 
   }
   */
+  .social li button .socialicon {
+        font-size: 17px; 
+  } 
+
+}
+}
+
+@media (max-width: 767px){
+footer{
+
   
+    .mdl-mini-footer__right-section{
+      margin: auto;
+    }
+    .mdl-mini-footer__left-section{
+      margin: auto;
+    }
+  }
+}
+
+
+.np-flex-container{
+list-style: none;
+  
+  -ms-box-orient: horizontal;
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -moz-flex;
+  display: -webkit-flex;
+  display: flex;
+  
+}
+
+.npt-footer{
+  margin: auto;
+  align-items: center;
+  flex-flow: row wrap;
+  max-width: 900px;
+  justify-content: space-between;
+
+  .npt__link-list{
+    margin: 0;
+  padding: 0;
+  list-style: none;
+  text-align: center; 
+  li {
+    display: inline-block;
+    margin: 5px 15px; 
+}
+  }
+.npt__left-section{
+    order: 0;
+
+  }
+  .npt__right-section{
+    order: 1;
+
+  }
+  
+   .social {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  text-align: center; 
+}
+  
+.social li {
+    display: inline-block;
+    margin: 5px 15px; 
+}
+
+.social li button .socialicon{
+   font-size: 20px;
+   display: block;
+}
+
+.social li button {
+      width: 45px;
+      height: 45px;
+}
+}
+
+ @media (max-width: 767px) {
+
+   .npt-footer{
+  
+  
+.npt__left-section{
+    margin: auto;
+
+  }
+  .npt__right-section{
+    margin: auto;
+
+  }
+  .social li {
+    margin-left: 5px;
+    margin-right: 5px; 
+  }
+  .social li button {
+      width: 35px;
+      height: 35px; 
+  }
+  /*
+  .social li a, .social li a .socialicon {
+        line-height: 35px; 
+  }
+  */
+  .social li button .socialicon {
+        font-size: 17px; 
+  } 
+
+}
+ 
+}
